TestCases/Errors/Haversine/observations/sst/win_08_obs.spm
obs r15-c6 0.000470926724683402
obs r15-c7 0.00063950662806594
obs r3-c11 0.0263541666666667
obs r5-c11 0.00123456790123457
obs r3-c12 0.0178571428571429
obs r5-c13 0.00439628482972136
obs r4-c14 0.0208333333333333
obs r5-c14 0.0208333333333333
obs r4-c15 0.03
obs r5-c15 0.0161070740706525
obs r6-c15 0.029010989010989
obs r5-c16 0.0194642857142857
obs r6-c16 0.0183015450768464
obs r7-c16 0.0257929820619406
obs r8-c17 0.023
obs r5-c18 0.00333333333333333
obs r7-c18 0.0155396389324961
obs r8-c18 0.0163382626145784
obs r5-c19 0.01
obs r7-c19 0.0108333333333333
obs r8-c19 0.0115270438569092
obs r9-c19 0.012547619047619
obs r10-c19 0.0139867724867725
obs r7-c20 0.0108333333333333
obs r8-c20 0.00922250594226762
obs r9-c20 0.01
obs r10-c20 0.00971212121212121
obs r8-c21 0.00625
error_value r15-c6 0.2
error_value r15-c7 0.2
error_value r3-c11 0.2
error_value r5-c11 0.2
error_value r3-c12 0.2
error_value r5-c13 0.2
error_value r4-c14 0.2
error_value r5-c14 0.2
error_value r4-c15 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r5-c16 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r8-c17 0.2
error_value r5-c18 0.2
error_value r7-c18 0.2
error_value r8-c18 0.2
error_value r5-c19 0.2
error_value r7-c19 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r7-c20 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r8-c21 0.2
